# kludgine-example-wasm

./: Cargo.toml  Makefile.toml
src/: main.rs
static/: index.html
static/pkg/: kludgineweb.d.ts  kludgineweb.js  kludgineweb_bg.wasm.d.ts
