[package]
name = "kludgineweb"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

[build]
rustflags = "--cfg=web_sys_unstable_apis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kludgine = { path = "../kludgine", default-features = false, features = [] }
wasm-bindgen = "0.2.69"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

[patch.crates-io]
easygpu = { path = "../easygpu" }
easygpu-lyon = { path = "../easygpu-lyon" }
